# NewsAgenticSystem

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3b59c85d070d_init_tables.py  58bdbdba3bb3_update_summary_model_and_constraints.py  d34b7f46de0e_change_rel_float.py  d9ae3b2057f3_add_is_urgent.py
app/: main.py  semantic_memory.py
app/core/: logger.py  settings.py
app/db/: models.py  neon.py  session.py
app/keys/: manager.py  rotation.py
app/orchestrator/: dispatcher.py  graph.py  mcp.py  models.py  orchestrator.py  registry.py  router.py  runtime.py  scheduler.py  state.py  tools.py
app/orchestrator/agents/: __init__.py  collector.py  filter.py  memory.py  pipeline_ingest.py  publisher.py  summarizer.py  support.py
app/telegram/: bot.py  router.py  service.py
app/tools/: llm.py
scripts/: semantic_memory_test.py
