[project]
name = "newsagenticsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi==0.115.0",
    "httpx==0.27.0",
    "langchain-core>=0.3.15,<0.4.0",
    "langchain-openai==0.3.9",
    "langchain-groq==0.2.3",
    "langchain-mcp-adapters==0.1.4",
    "langgraph==0.3.34",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot==21.6",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]==0.30.6",
    "weasyprint==62.3",
    "pydyf==0.10.0",
    "rich>=13.7.1",
    "reportlab==4.2.5",
    "pinecone>=5.0.0",
    "langchain-huggingface==0.1.2",
    "huggingface_hub==0.24.6",
]
